--- a/app/src/main/res/layout/activity_list_dokter_spesialis.xml
+++ b/app/src/main/res/layout/activity_list_dokter_spesialis.xml
@@ -20,21 +20,22 @@
             layout="@layout/layout_toolbar" />
 
         <RelativeLayout
-            android:layout_width="300dp"
+            android:layout_width="130pt"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="5pt"
             android:background="#FFF">
             <TextView
                 android:id="@+id/vtext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:paddingLeft="25dp"
-                android:paddingRight="25dp"
+                android:paddingTop="8pt"
+                android:paddingBottom="8pt"
+                android:paddingLeft="4pt"
+                android:paddingRight="4pt"
                 android:textColor="#000"
                 android:text="text"
-                android:textSize="18dp"
+                android:textSize="8pt"
                 android:textStyle="bold"
                 android:gravity="center"/>
 
