--- a/app/src/main/res/layout/activity_list_info_dokter_spesialis.xml
+++ b/app/src/main/res/layout/activity_list_info_dokter_spesialis.xml
@@ -20,10 +20,11 @@
             layout="@layout/layout_toolbar" />
 
         <RelativeLayout
-            android:layout_width="300dp"
+            android:layout_width="140pt"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="#FFF">
+            android:background="#FFF"
+            android:layout_marginBottom="5pt">
 
             <TextView
                 android:id="@+id/vtext"
@@ -36,9 +37,9 @@
                 android:paddingTop="20dp"
                 android:paddingRight="25dp"
                 android:paddingBottom="20dp"
-                android:text="text"
+                android:text="Dokter Spesialis"
                 android:textColor="#000"
-                android:textSize="18dp"
+                android:textSize="8pt"
                 android:textStyle="bold" />
 
         </RelativeLayout>
