--- a/app/src/main/res/layout/activity_list_spesialis.xml
+++ b/app/src/main/res/layout/activity_list_spesialis.xml
@@ -9,19 +9,19 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-        app:cardCornerRadius="5dp">
+        android:layout_marginBottom="3pt"
+        app:cardCornerRadius="2pt">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:paddingBottom="5pt"
             android:background="#FFF">
 
             <ImageView
                 android:id="@+id/imV"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="25pt"
+                android:layout_height="25pt"
                 android:paddingTop="5dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
@@ -31,13 +31,14 @@
             <TextView
                 android:id="@+id/Vspesialis"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:paddingLeft="15dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5pt"
+                android:paddingLeft="7pt"
                 android:layout_toRightOf="@+id/imV"
                 android:gravity="center|left"
                 android:text="TextView"
                 android:textColor="#000"
-                android:textSize="20dp"
+                android:textSize="8pt"
                 />
         </LinearLayout>
 
