--- a/app/src/main/res/layout/activity_tentang.xml
+++ b/app/src/main/res/layout/activity_tentang.xml
@@ -5,20 +5,70 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context=".Layanan.Tentang">
+    tools:context=".Layanan.Tentang"
+    android:padding="5pt"
+    android:orientation="vertical">
+
+      <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tentang Applikasi :"
+            android:textStyle="bold"
+            android:textSize="8pt"
+            android:textColor="#000"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Aplikasi ini merupakan aplikasi untuk melihat jadwal dokter spesialis yang ada di bandar lampung"
+        android:textStyle="italic"
+        android:textSize="7pt"
+        android:textColor="#000"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tentang Pengembang :"
+        android:layout_marginTop="5pt"
+        android:textStyle="bold"
+        android:textSize="8pt"
+        android:textColor="#000"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Finger Fiver Team\nEmail : teamproyek7@gmail.com"
+        android:textStyle="italic"
+        android:textSize="7pt"
+        android:textColor="#000"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_applikasi"
+        android:layout_marginTop="30pt"
+        android:layout_gravity="center"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/idTekno"
+            android:layout_width="50pt"
+            android:layout_height="50pt"
+            android:layout_marginTop="60pt"
+            android:layout_alignParentBottom="true"
+            android:src="@mipmap/icon_tekno"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Data Tidak Tersedia"
-            android:textStyle="bold"
-            android:textColor="#000"
-            android:gravity="center"/>
-
+        <ImageView
+            android:layout_width="50pt"
+            android:layout_height="50pt"
+            android:layout_marginTop="60pt"
+            android:src="@mipmap/icon_ff"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 
-</LinearLayout>
+    </LinearLayout>
