add menu tambah dokter spesialis

--- a/app/src/main/res/menu/item_navigasi.xml
+++ b/app/src/main/res/menu/item_navigasi.xml
@@ -7,11 +7,15 @@
             android:icon="@drawable/ic_beranda"
             android:title="Beranda" />
         <item
+            android:id="@+id/tambah"
+            android:checked="false"
+            android:icon="@drawable/ic_person"
+            android:title="Tambah Dokter Spesialis" />
+        <item
             android:id="@+id/akun"
             android:checked="false"
             android:icon="@drawable/ic_person"
             android:title="Akun" />
-
     </group>
 
 
