--- a/app/src/main/res/layout/activity_list_dokter_spesialis.xml
+++ b/app/src/main/res/layout/activity_list_dokter_spesialis.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f2f2"
+    android:background="#FF0DBFAC"
     android:fitsSystemWindows="true"
     tools:context=".DaftarDokterSpesialis.ListDokterSpesialis">
 
@@ -23,8 +23,9 @@
             android:layout_width="130pt"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="5pt"
             android:layout_marginBottom="5pt"
-            android:background="#FFF">
+            android:background="#f2f2f2">
             <TextView
                 android:id="@+id/vtext"
                 android:layout_width="match_parent"
