--- a/app/src/main/res/layout/activity_list_info_dokter_spesialis.xml
+++ b/app/src/main/res/layout/activity_list_info_dokter_spesialis.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f2f2"
+    android:background="#FF0DBFAC"
     android:fitsSystemWindows="true"
     tools:context=".ViewDokterSpesialis.ListInfoDokterSpesialis">
 
@@ -23,7 +23,8 @@
             android:layout_width="140pt"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="#FFF"
+            android:layout_marginTop="5pt"
+            android:background="#f2f2f2"
             android:layout_marginBottom="5pt">
 
             <TextView
