--- a/app/src/main/res/layout/activity_list_spesialis.xml
+++ b/app/src/main/res/layout/activity_list_spesialis.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="5pt"
-            android:background="#FFF">
+            android:background="#FFF"
+            android:id="@+id/cardView">
 
             <ImageView
                 android:id="@+id/imV"
