--- a/app/src/main/res/layout/list_info_dokter.xml
+++ b/app/src/main/res/layout/list_info_dokter.xml
@@ -4,99 +4,119 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
-    app:cardCornerRadius="2pt"
-    android:layout_marginTop="3pt">
+    app:cardCornerRadius="10pt"
+    android:layout_marginBottom="2pt"
+    android:layout_marginRight="5pt"
+    android:layout_marginLeft="5pt"
+    android:id="@+id/card">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#fff">
+        android:layout_margin="2pt"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/fotoDokter"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:src="@drawable/icon_profile"
-            android:layout_gravity="center"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5pt"
+            android:layout_marginBottom="5pt">
+
+            <TextView
+                android:id="@+id/namaDokter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="3pt"
+                android:gravity="center"
+                android:paddingBottom="3pt"
+                android:text="Nama Dokter"
+                android:textColor="#000"
+                android:textSize="7pt"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="45pt"
-            android:paddingLeft="3pt"
-            android:orientation="vertical"
-            android:layout_gravity="center">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="5pt"
+            android:layout_marginBottom="2pt">
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/nama"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="3pt"
-                    android:paddingBottom="3pt"
-                    android:text="Nama : "
-                    android:textColor="#000"/>
+            <TextView
+                android:id="@+id/hari"
+                android:layout_width="40pt"
+                android:layout_height="wrap_content"
+                android:paddingBottom="3pt"
+                android:text="Hari "
+                android:textSize="6pt"
+                android:textColor="#000" />
 
-                <TextView
-                    android:id="@+id/namaDokter"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Nama Dokter"
-                    android:layout_toRightOf="@+id/nama"
-                    android:textColor="#000"
-                    android:textStyle="bold"
-                    android:paddingBottom="3pt"
-                    android:paddingTop="3pt"/>
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/idHari"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="3pt"
+                android:text="Hari"
+                android:textSize="6pt"
+                android:textColor="#000"
+                android:textStyle="bold" />
+        </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/hari"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="3pt"
-                    android:text="Hari    : "
-                    android:textColor="#000"/>
-                <TextView
-                    android:id="@+id/idHari"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/hari"
-                    android:textColor="#000"
-                    android:text="Hari"
-                    android:textStyle="bold"
-                    android:paddingBottom="3pt"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="5pt"
+            android:layout_marginBottom="2pt">
 
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/jam"
+                android:layout_width="40pt"
+                android:layout_height="wrap_content"
+                android:paddingBottom="3pt"
+                android:text="Jam "
+                android:textSize="6pt"
+                android:textColor="#000" />
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/jam"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="3pt"
-                    android:text="Jam    : "
-                    android:textColor="#000"/>
-                <TextView
-                    android:id="@+id/idJam"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/jam"
-                    android:textColor="#000"
-                    android:textStyle="bold"
-                    android:text="Jam"
-                    android:paddingBottom="3pt"/>
-
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/idJam"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="3pt"
+                android:text="Jam"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:textSize="6pt" />
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="5pt"
+            android:layout_marginBottom="2pt">
+
+            <TextView
+                android:id="@+id/Poli"
+                android:layout_width="40pt"
+                android:layout_height="wrap_content"
+                android:paddingBottom="3pt"
+                android:text="Nama Poli "
+                android:textSize="6pt"
+                android:textColor="#000" />
+
+            <TextView
+                android:id="@+id/idPoli"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="3pt"
+                android:text="poli"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:textSize="6pt"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
