--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -1,27 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="190dp"
-                android:background="#E6E6E6"
-                android:orientation="vertical">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:padding="30dp"
-        android:src="@drawable/ic_person"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+    android:layout_width="match_parent"
+    android:layout_height="90pt"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#E6E6E6"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardProfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="19pt"
+            android:layout_marginTop="40pt"
+            android:layout_marginLeft="10pt">
+            <ImageView
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:src="@mipmap/icon_ff"/>
+        </android.support.v7.widget.CardView>
         <TextView
+            android:id="@+id/idAkun"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/cardProfil"
             android:text="Pengguna :"
             android:textColor="#000"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="2pt"
+            android:textSize="7pt"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 </RelativeLayout>
