--- a/app/src/main/res/layout/activity_tambah_spesialis.xml
+++ b/app/src/main/res/layout/activity_tambah_spesialis.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FF0DBFAC"
     android:orientation="vertical"
-    tools:context=".TambahSpesialis">
+    tools:context=".MenuTambah.TambahSpesialis">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
