--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,14 +70,24 @@
         android:textColor="#000"
         android:textSize="14dp"/>
 
-    <EditText
-        android:id="@+id/id_PasswordMasuk"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Password"
-        android:paddingRight="10dp"
-        android:paddingLeft="10dp"/>
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/colorAccent">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/id_PasswordMasuk"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="Password"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
