--- a/app/src/main/res/layout/activity_ubah_password.xml
+++ b/app/src/main/res/layout/activity_ubah_password.xml
@@ -1,9 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FF0DBFAC"
+    android:orientation="vertical"
     tools:context=".Akun.UbahPassword">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5pt"
+        app:cardCornerRadius="7pt">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5pt"
+                android:layout_marginTop="10pt"
+                android:text="Alamat Email Anda"
+                android:textColor="#000"
+                android:textSize="7pt" />
+
+            <EditText
+                android:id="@+id/ubahEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5pt"
+                android:layout_marginBottom="10pt"
+                android:focusable="true"
+                android:hint="Email"
+                android:textColor="#000" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5pt"
+                android:text="Kata Sandi"
+                android:textColor="#000"
+                android:textSize="7pt" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorAccent">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/sandiLama"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5pt"
+                    android:layout_marginBottom="10pt"
+                    android:inputType="textPassword"
+                    android:hint="Kata Sandi"
+                    android:textColor="#000" />
+            </android.support.design.widget.TextInputLayout>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5pt"
+                    android:text="Kata Sandi Baru"
+                    android:textColor="#000"
+                    android:textSize="7pt" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorAccent">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/sandiBaru"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5pt"
+                    android:layout_marginBottom="10pt"
+                    android:inputType="textPassword"
+                    android:hint="Kata Sandi Baru"
+                    android:textColor="#000" />
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5pt">
+
+        <Button
+            android:id="@+id/btnUbahSandi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5pt"
+            android:background="#f2f2f2"
+            android:text="Simpan Perubahan" />
+    </RelativeLayout>
+
+
+</LinearLayout>
