--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Akun.DaftarActivity"
-    android:background="#fff">
+    android:background="#FF0DBFAC"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:layout_height="wrap_content"
+        android:layout_margin="5pt"
+        app:cardCornerRadius="5pt">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="5pt">
         <TextView
             android:id="@+id/id_textDaftar"
             android:layout_width="wrap_content"
@@ -22,7 +27,7 @@
             android:layout_alignParentStart="true"
             android:text="Isi Data Dibawah"
             android:textColor="#000"
-            android:textSize="20sp" />
+            android:textSize="9pt" />
 
         <EditText
             android:id="@+id/id_nama"
@@ -33,7 +38,7 @@
             android:inputType="textEmailAddress"
             android:hint="Nama Lengkap"
             android:imeOptions="actionNext"
-            android:textSize="16dp"
+            android:textSize="7pt"
             android:maxLines="1"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:singleLine="true"
@@ -48,7 +53,7 @@
             android:inputType="phone"
             android:hint="Nomor Telp"
             android:imeOptions="actionNext"
-            android:textSize="16dp"
+            android:textSize="7pt"
             android:maxLines="1"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:singleLine="true"
@@ -63,13 +68,19 @@
             android:inputType="textEmailAddress"
             android:hint="Email"
             android:imeOptions="actionNext"
-            android:textSize="16dp"
+            android:textSize="7pt"
             android:maxLines="1"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:singleLine="true"
             android:textColor="#000" />
 
-        <EditText
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/colorAccent">
+
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/id_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -79,29 +90,13 @@
             android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:textColor="#000"
-            android:textSize="16dp"
+            android:textSize="7pt"
             android:maxLines="1"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:singleLine="true" />
-
-        <Button
-            android:id="@+id/buttonRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/id_password"
-            android:layout_alignParentRight="true"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
-            android:paddingTop="10dp"
-            android:text="Daftar"
-            android:textAllCaps="false"
-            android:textColor="#FF0DBFAC"
-            android:textSize="24sp" />
-
-    </RelativeLayout>
+        </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
     <!--for progress loading-->
     <RelativeLayout
@@ -121,4 +116,21 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/buttonRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
+        android:layout_marginRight="10pt"
+        android:layout_gravity="right"
+        android:paddingBottom="5pt"
+        android:paddingLeft="10pt"
+        android:paddingRight="10pt"
+        android:paddingTop="5pt"
+        android:text="Daftar"
+        android:textAllCaps="false"
+        android:textColor="#FF0DBFAC"
+        android:textSize="9pt" />
+</LinearLayout>
