--- a/app/src/main/res/layout/activity_info_akun.xml
+++ b/app/src/main/res/layout/activity_info_akun.xml
@@ -1,23 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer"
+    android:fitsSystemWindows="true"
     tools:context=".Akun.InfoAkun">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#f2f2f2">
-        <ImageView
+        android:background="#FF0DBFAC">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_toolbar" />
+
+        <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="15pt"
+            android:layout_margin="10pt">
+            <ImageView
+                android:id="@+id/imageAkun"
+                android:layout_width="30pt"
+                android:layout_height="30pt"
+                android:src="@mipmap/icon_ff"/>
+        </android.support.v7.widget.CardView>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10pt"
+            android:layout_marginBottom="20pt">
+            <TextView
+                android:id="@+id/idPengguna"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nama Pengguna"
+                android:textColor="#000"
+                android:textSize="9pt"
+                android:textStyle="bold"/>
+        </RelativeLayout>
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Data Tidak Tersedia\nSilahkan Tunggu Hingga Update Berikutnya"
-            android:gravity="center"/>
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10pt"
+            android:layout_margin="10pt"
+            android:onClick="changePass">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10pt"
+                android:layout_marginLeft="10pt"
+                android:layout_marginBottom="5pt"
+                android:textSize="7pt"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:text="Ubah kata sandi"
+                android:onClick="changePass"/>
+            <ImageView
+                android:layout_width="20pt"
+                android:layout_height="30pt"
+                android:src="@drawable/ic_next"
+                android:layout_gravity="right"/>
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/layout_header"
+        app:menu="@menu/item_navigasi"/>
+
+</android.support.v4.widget.DrawerLayout>
