--- a/app/src/main/res/layout/activity_ubah_password.xml
+++ b/app/src/main/res/layout/activity_ubah_password.xml
@@ -62,7 +62,7 @@
                     android:textColor="#000" />
             </android.support.design.widget.TextInputLayout>
 
-                <EditText
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5pt"
