--- a/app/src/main/res/layout/activity_info_akun.xml
+++ b/app/src/main/res/layout/activity_info_akun.xml
@@ -36,7 +36,7 @@
             android:layout_marginLeft="10pt"
             android:layout_marginBottom="20pt">
             <TextView
-                android:id="@+id/idPengguna"
+                android:id="@+id/displayNama"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nama Pengguna"
@@ -49,7 +49,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10pt"
-            android:layout_margin="10pt"
+            android:layout_marginBottom="5pt"
+            android:onClick="changePass">
+            <TextView
+                android:id="@+id/Displayemail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10pt"
+                android:layout_marginLeft="10pt"
+                android:textSize="7pt"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:text="Email"/>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10pt"
+            android:layout_marginBottom="5pt"
             android:onClick="changePass">
             <TextView
                 android:layout_width="wrap_content"
@@ -62,6 +80,30 @@
                 android:textStyle="bold"
                 android:text="Ubah kata sandi"
                 android:onClick="changePass"/>
+            <ImageView
+                android:layout_width="20pt"
+                android:layout_height="30pt"
+                android:src="@drawable/ic_next"
+                android:layout_gravity="right"/>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10pt"
+            android:layout_marginBottom="5pt"
+            android:onClick="changePass">
+            <TextView
+                android:id="@+id/keluar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10pt"
+                android:layout_marginLeft="10pt"
+                android:textSize="7pt"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:text="Keluar"
+                android:onClick="logOut"/>
             <ImageView
                 android:layout_width="20pt"
                 android:layout_height="30pt"
