--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -33,19 +33,20 @@
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/tekno"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="30pt"
+            android:layout_height="30pt"
+            android:layout_marginLeft="5pt"
+            android:layout_marginBottom="5pt"
+            android:layout_marginTop="3pt"
             android:layout_alignParentBottom="true"
             android:src="@mipmap/icon_tekno" />
 
         <ImageView
             android:id="@+id/dev"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="30pt"
+            android:layout_height="30pt"
+            android:layout_marginRight="5pt"
+            android:layout_marginBottom="5pt"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:src="@mipmap/icon_ff" />
