--- a/app/src/main/res/layout/activity_list_spesialis.xml
+++ b/app/src/main/res/layout/activity_list_spesialis.xml
@@ -9,15 +9,23 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="3pt"
-        app:cardCornerRadius="2pt">
+        android:layout_marginLeft="5pt"
+        android:layout_marginRight="5pt"
+        android:layout_marginBottom="2pt"
+        app:cardCornerRadius="5pt">
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="5pt"
             android:background="#FFF"
-            android:id="@+id/cardView">
+            android:id="@+id/cardView"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imV"
@@ -31,7 +39,7 @@
 
             <TextView
                 android:id="@+id/Vspesialis"
-                android:layout_width="match_parent"
+                android:layout_width="120pt"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5pt"
                 android:paddingLeft="7pt"
@@ -41,7 +49,17 @@
                 android:textColor="#000"
                 android:textSize="8pt"
                 />
+
         </LinearLayout>
+
+            <ImageView
+                android:layout_width="25pt"
+                android:layout_height="25pt"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_next"/>
+        </RelativeLayout>
+
 
     </android.support.v7.widget.CardView>
 
