--- a/app/src/main/res/layout/activity_tambah_spesialis.xml
+++ b/app/src/main/res/layout/activity_tambah_spesialis.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF0DBFAC"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer"
+    android:fitsSystemWindows="true"
     tools:context=".MenuTambah.TambahSpesialis">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5pt"
-        app:cardCornerRadius="7pt">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#FF0DBFAC">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_toolbar" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -89,7 +94,6 @@
                 android:hint="Poli"
                 android:textColor="#000" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -106,5 +110,14 @@
             android:text="Tambah" />
     </RelativeLayout>
 
+    </LinearLayout>
 
-</LinearLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/layout_header"
+        app:menu="@menu/item_navigasi"/>
+
+</android.support.v4.widget.DrawerLayout>
