--- a/app/src/main/res/layout/activity_tentang.xml
+++ b/app/src/main/res/layout/activity_tentang.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
-    tools:context=".Layanan.Tentang"
-    android:padding="5pt"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer"
+    android:fitsSystemWindows="true"
+    tools:context=".Akun.InfoAkun">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#FF0DBFAC">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_toolbar" />
 
       <TextView
             android:layout_width="wrap_content"
@@ -72,3 +81,13 @@
     </RelativeLayout>
 
     </LinearLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/layout_header"
+        app:menu="@menu/item_navigasi"/>
+
+</android.support.v4.widget.DrawerLayout>
