--- a/app/src/main/res/layout/list_info_dokter.xml
+++ b/app/src/main/res/layout/list_info_dokter.xml
@@ -3,18 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#fff"
     app:cardCornerRadius="10pt"
     android:layout_marginBottom="2pt"
     android:layout_marginRight="5pt"
-    android:layout_marginLeft="5pt"
-    android:id="@+id/card">
+    android:layout_marginLeft="5pt">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2pt"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/card">
 
         <RelativeLayout
             android:layout_width="match_parent"
